@@ -2,9 +2,10 @@ package classes;
 
 import enums.TaskColor;
 import enums.TaskState;
+import enums.TaskType;
 import interfaces.BaseEvaluator;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.TreeMap;
 
 public class Evaluator implements BaseEvaluator {
@@ -12,17 +13,16 @@ public class Evaluator implements BaseEvaluator {
     }
 
     @Override
-    public TreeMap<Long, TaskColor> evaluate(LinkedList<? extends Task> tasks) {
+    public TreeMap<Long, TaskColor> evaluate(ArrayList<Task> tasks) {
         TreeMap<Long, TaskColor> treeMap = new TreeMap<>();
         // Evaluating...
         if (tasks.size() == 1) {
-            treeMap.put(tasks.getFirst().getTaskId(), TaskColor.GREEN);
+            treeMap.put(tasks.get(0).getTaskId(), TaskColor.GREEN);
         } else {
-            Task previousTask = tasks.getFirst();
+            Task previousTask = tasks.get(0);
             Task currentTask;
 
             for (Task task : tasks) {
-
                 currentTask = task;
 
                 TaskColor taskColor = this.getColor(currentTask, previousTask);
@@ -37,7 +37,7 @@ public class Evaluator implements BaseEvaluator {
 
     private TaskColor getColor(Task currentTask, Task previousTask) {
         TaskColor colorToReturn;
-        if (previousTask.getState().equals(TaskState.COMPLETE)) {
+        if (previousTask.getType().equals(TaskType.OPTIONAL) || previousTask.getState().equals(TaskState.COMPLETE)) {
             colorToReturn = TaskColor.GREEN;
         } else {
             if (currentTask.getState().equals(TaskState.COMPLETE))
@@ -61,5 +61,6 @@ public class Evaluator implements BaseEvaluator {
                 return TaskState.PENDING;
         }
     }
+
 }
 
